endpoint for user's products created

--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -70,153 +70,9 @@
                             </div>
                             <div class="products">
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <div class="col-md-12 products-list">
                                         <!-- All producs here-->
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title </h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg'%}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card" style="width: 15rem;">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}"  alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card" >
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <div class="products-i">
-                                            <a href="#" class="products-link mb-2">
-                                                <div class="card">
-                                                    <img class="card-img-top" src="{% static 'img/product_1.jpg' %}" alt="Card image cap">
-                                                    <div class="products-price-container">
-                                                        <div class="products-price">
-                                                            <span class="price-val">10 AZN</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="card-body">
-                                                    <h5 class="card-title products-name">Card title Card title Card title Card title</h5>
-                                                    <p class="card-text">Bakı, bugün, 18:21</p>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
+                                        
                                     </div>                                    
                                 </div>
                             </div>
