--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -21,5 +21,5 @@
     {% endblock body %}
     
 </body>
-    <script src="{% static 'js/filter.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </html>
