--- a/app/templates/includes/header_main.html
+++ b/app/templates/includes/header_main.html
@@ -13,29 +13,22 @@
                             <div class="pull-right">
                                 <a class="bookmarks-link" href="#"> <i class="fa fa-fw fa-heart "></i>Seçilmişlər</a>
                                 {% if request.user.is_authenticated %}                 
-                                    
                                     <div class="dropdown">
-                                        <a class="dropbtn"><i class="fa fa-fw fa-user "></i>{{request.user.email}}</a>
+                                        <a class="dropbtn"><i class="fa fa-fw fa-user "></i>email{{request.user.username}}</a>
                                         <div class="dropdown-content">
                                             <a href="#">Mənim elanlarım</a>
                                             <a href="#">Balansı artır</a>
                                             <a href="#">Seçilmişlər</a>
-                                            <a href="{% url 'users:log-out' %}">Çıxış</a>
+                                            <a href="#">Çıxış</a>
                                         </div>
                                     </div>
-                                
                                 {% else %}
-
                                     <a class="login-link" href="{% url 'users:login' %}"> <i class="fa fa-fw fa-user "></i>Giriş</a>
-                                
                                 {% endif %}
-
-                                <a type="button" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
+                                <a type="button" href="{% url 'new-product-add-page' %}" class="header-btn"><i class="fa fa-fw fa-plus"></i>Elan yerləşdir</a>
                             </div> 
                         </div>   
                     </div>
                 </div>
             </div>
         </div>
-
-        
