--- a/app/templates/pages/new_product.html
+++ b/app/templates/pages/new_product.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
     <link rel="stylesheet" href="{% static 'css/header_main.css'%}">
     <link rel="stylesheet" href="{% static 'css/header_dropdown.css' %}">
-    <link rel="stylesheet" href="{% static 'css/add_product.css'%}">
+    <link rel="stylesheet" href="{% static 'css/new_product.css'%}">
     <link rel="stylesheet" href="{% static 'css/footer.css'%}">
 {% endblock css %}
 {% block body %}
