--- a/app/app/static/css/new_product.css
+++ b/app/app/static/css/new_product.css
@@ -35,7 +35,7 @@ h1 {
 }
 .styled-button{
 margin-top: 5px;
-padding-left: 235px;
+padding-left: 50%;
 }
 
 
@@ -48,7 +48,7 @@ padding-left: 235px;
     line-height: 34px;
     border: 0;
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 0 60px;
     color: #fff8f2;
     font-weight: bold;
     font-family: Arial, sans-serif;
