--- a/app/templates/accounts/acc_active_email.html
+++ b/app/templates/accounts/acc_active_email.html
@@ -9,7 +9,7 @@
     {% autoescape off %}  
         Hi {{ user.username }},  
         Please click on the link to confirm your registration,
-        http://{{ domain }}{% url 'users:activate' uidb64=uid token=token %}  
+        {{ domain }}{% url 'users:activate' uidb64=uid token=token %}  
         If you think, it's not you, then just ignore this email.  
     {% endautoescape %}
 </body>
