--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -22,12 +22,13 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <form class="simple_form lot-form js-lot-form no-banners lot-form--unauthorized product-form" accept-charset="UTF-8" method="post">
+                                        {% csrf_token %}
                                         <div class='row'>
                                             <div class='col-md-5'>
-                                                <span>Kateqoriya</span>
+                                                <span>Kateqoriya <span class='required'>*</span></span>
                                             </div>
                                             <div class='col-md-7'>
-                                                <select class="form-control">
+                                                <select class="form-control" name='category' >
                                                     <option selected="selected" disabled>Siyahıdan seçin</option>
                                                     {% for category in categories %}
                                                       <optgroup label="{{ category.name }}">
@@ -41,23 +42,58 @@
                                         </div>
                                         <div class='row'>
                                             <div class='col-md-5'>
-                                                <span>Şəhər</span>
                                             </div>
                                             <div class='col-md-7'>
-                                                <select class="form-control">
-                                                    <option selected="selected" disabled>Siyahıdan seçin</option>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" id="isNewCheck" name="is_new">
+                                                    <label class="form-check-label" for="isNewCheck">
+                                                      Yeni?
+                                                    </label>
+                                                  </div>
+                                            </div>
+                                        </div> 
+                                        <div class='row'>
+                                            <div class='col-md-5'>
+                                            </div>
+                                            <div class='col-md-7'>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" name="delivery" id="isDeliveryCheck">
+                                                    <label class="form-check-label" for="isDeliveryCheck">
+                                                        Çatdırılma?
+                                                    </label>
+                                                  </div>
+                                            </div>
+                                        </div> 
+                                        <div class='row'>
+                                            <div class='col-md-5'>
+                                                <span>Elanın adı <span class='required'>*</span></span>
+                                            </div>
+                                            <div class='col-md-7'>
+                                                <div class="form-group">
+                                                    <input type="text" name="title" class="form-control" id="productTitleInput" aria-describedby="titleHelp" required>
+                                                  </div>
+                                            </div>
+                                        </div> 
+                                        <div class='row'>
+                                            <div class='col-md-5'>
+                                                <span>Şəhər <span class='required'>*</span></span>
+                                            </div>
+                                            <div class='col-md-7'>
+                                                <select class="form-control" name='city'>
+                                                    <option selected="selected"  disabled>Siyahıdan seçin</option>
                                                     {% for city in cities %}
                                                         <option value="{{ city.name }}">{{ city.name }}</option>
                                                     {% endfor %}
                                                   </select>
                                             </div>
                                         </div>
-                                        <div class='row'>
+                                        <div class='row price-row'>
                                             <div class='col-md-5'>
-                                                <span>Qiymət, AZN</span>
+                                                <span>Qiymət, AZN <span class='required'>*</span></span>
                                             </div>
                                             <div class='col-md-7'>
-                                                <input class="form-control" type="number">
+                                                <input class="form-control" type="number" name="price" required>
+                                                <span class='currency'>AZN</span>
                                             </div>
                                         </div>  
                                         <div class='row'>
@@ -66,42 +102,52 @@
                                             </div>
                                             <div class='col-md-7'>
                                                 <div class="form-group">
-                                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
                                                   </div>
                                             </div>
                                         </div> 
                                         <div class='row'>
                                             <div class='col-md-5'>
-                                                <span>Şəkillər</span>
+                                                <span>Şəkillər </span>
                                             </div>
                                             <div class='col-md-7'>
-                                                <input class="form-control form-control-sm" id="formFileSm" type="file" />
+                                                <input class="form-control form-control-sm" id="formFileSm" type="file" accept="image/*" />
                                             </div>
                                         </div> 
-                                        <div class='row'>
-                                            <div class='col-md-5'>
-                                                <span>Ad</span>
+                                        <fieldset class='contact'>
+                                            <div class='row'>
+                                                <div class='col-md-5'></div>
+                                                <div class='col-md-7'>
+                                                    <span class='contact-span'>
+                                                        Əlaqə məlumatları
+                                                    </span>
+                                                </div>
                                             </div>
-                                            <div class='col-md-7'>
-                                                <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">    
-                                            </div>
-                                        </div> 
-                                        <div class='row'>
-                                            <div class='col-md-5'>
-                                                <span>E-mail</span>
-                                            </div>
-                                            <div class='col-md-7'>
-                                                <input type="email" class="form-control" id="exampleInputName" aria-describedby="nameHelp">    
-                                            </div>
-                                        </div> 
-                                        <div class='row'>
-                                            <div class='col-md-5'>
-                                                <span>Mobil nömrə</span>
-                                            </div>
-                                            <div class='col-md-7'>
-                                                <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">    
-                                            </div>
-                                        </div> 
+                                            <div class='row'>
+                                                <div class='col-md-5'>
+                                                    <span>Ad <span class='required'>*</span></span>
+                                                </div>
+                                                <div class='col-md-7'>
+                                                    <input type="text" class="form-control" name="name" id="exampleInputName" aria-describedby="nameHelp" required>    
+                                                </div>
+                                            </div> 
+                                            <div class='row'>
+                                                <div class='col-md-5'>
+                                                    <span>E-mail <span class='required'>*</span></span>
+                                                </div>
+                                                <div class='col-md-7'>
+                                                    <input type="email" name="email" class="form-control" id="exampleInputName" aria-describedby="nameHelp" required>    
+                                                </div>
+                                            </div> 
+                                            <div class='row'>
+                                                <div class='col-md-5'>
+                                                    <span>Mobil nömrə <span class='required'>*</span></span>
+                                                </div>
+                                                <div class='col-md-7'>
+                                                    <input type="text" name="phone_number" class="form-control" id="exampleInputName" aria-describedby="nameHelp" placeholder="(000) 000-00-00" required>    
+                                                </div>
+                                            </div> 
+                                        </fieldset>
 
                                         <div class="confirm-rules">Elan yerləşdirərək, siz Tap.az-ın 
                                             <a target="_blank" href="/pages/terms-and-conditions">İstifadəçi razılaşması</a> 
