--- a/app/app/static/css/header_dropdown.css
+++ b/app/app/static/css/header_dropdown.css
@@ -51,5 +51,14 @@
     color: #FF6617;
     margin:0 0.2rem 0 0.7rem;
   }
-
+  @media only screen and (max-width:480px) and (min-width: 120px) {
+    .dropdown-content a {
+      font-size: 12px;
+    } 
+ }
+ @media only screen and (max-width:767px) and (min-width: 480px) {
+  .dropdown-content a {
+      font-size: 13px;
+    } 
+ }
 
