--- a/app/app/static/css/header_main.css
+++ b/app/app/static/css/header_main.css
@@ -5,15 +5,14 @@
     font-size: 15px;
 
 }
-
 .header-main-row{
     padding: 0 5% 0 5%;
 }
-
 .header-main a {
     color: #fff; 
     font-weight: bold;
-    margin-left: 25px; 
+    margin-left: 50px;
+   
 }
 
 .header-btn {
@@ -21,10 +20,9 @@
     text-transform: uppercase;
     text-align: center;
     font-size: 14px;
-    padding: 12px 60px;
+    padding: 12px 63px;
     background-color: #3fa425;
 }
-
 .dropbtn {
     color: #939292;
     border: none;
@@ -32,12 +30,116 @@
   }
 .dropdown{
     color: #939292;
-    padding-left: 10px;
-    line-height: 40px;
+    line-height: 20px;
 }
-#price_range{
-    width: 90px;
-    padding: 0 10px;
-    height: 50px;
-    display: initial;
+@media screen and (min-width: 767px) and (max-width: 1198px) {
+    .header-main {
+          font-size: 14px;
+      }
+      .logo img{
+        display: block;
+        margin-left: auto;
+        margin-right:auto;
+        width: 50%;
+      }
+      .header-main-row{
+          padding: 0;
+      }
+      .header-main a {
+          color: #fff; 
+          font-weight: bold;
+          margin:0;
+       }
+      .header-btn {
+          text-decoration: none;
+          text-transform: uppercase;
+          text-align: center;
+          font-size: 13px;
+          padding: 12px 12px;
+          background-color: #3fa425;
+      }
+      .dropdown-content  a{
+            font-size: 10px;
+            margin-left:15px;
+      }
+     .dropdown{
+            color: #939292;
+            line-height: 14px;
+   }
+}
+@media only screen and (max-width:767px) and (min-width: 480px) {
+    header-main {
+        font-size: 14px;
+    }
+    .logo img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+   
+    .header-main a {
+        color: #fff; 
+        font-weight: bold;
+        margin-left: 15px;   
+    }
+
+    .header-btn {
+        text-decoration: none;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 14px;
+        padding: 12px 12px;
+        background-color: #3fa425;
+    }
+
+    .dropdown-content  a{
+        margin-left:15px;
+    }
+    .dropdown{
+        color: #939292;
+        line-height: 10px;
+   }
+  
+    }
+
+@media only screen and (max-width:480px) and (min-width: 120px) {
+    .header-main {
+        font-size: 12px;
+    }
+    .logo img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+    .header-main-row{
+        padding: 0;
+    }
+    .header-main a {
+        color: #fff; 
+        font-weight: bold;
+        margin:0;
+        
+   
+    }
+    .header-btn {
+        text-decoration: none;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 10px;
+        padding: 10px 10px;
+        background-color: #3fa425;
+    }
+    .pull-right{
+        float: left;
+    }
+    .dropdown-content  a{
+        margin-left:15px;
+    }
+    .dropdown{
+        color: #939292;
+        line-height: 10px;
+   }
+     
 }
