--- a/app/templates/accounts/login_by_email.html
+++ b/app/templates/accounts/login_by_email.html
@@ -8,7 +8,7 @@
     <div id="auth-app">
         <div class="main stage-0">
             <div class="auth">
-                <a type="button" href="#" class="auth__close-btn">
+                <a type="button" href="{% url 'home-page'%}" class="auth__close-btn">
                     <img src="{% static 'img/close.jpg' %}">
                 </a>
                 <div class="login">
