--- a/app/templates/accounts/password_reset.html
+++ b/app/templates/accounts/password_reset.html
@@ -6,12 +6,13 @@
 {% endblock css %}
 
 {% block body %}
-
+  
+	
 	<!--Reset Password-->
 	<div id="auth-app">
         <div class="main stage-2">
              <div class="auth">
-                <a type="button" href="{% url 'homepage'%}" class="auth__close-btn">
+                <a type="button" href="{% url 'home-page'%}" class="auth__close-btn">
                     <img src="{% static 'img/close.jpg' %}">
                 </a>
                 <div class="login">
