--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -4,7 +4,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li>
-                            <a class="nav-link active" href="#"><i class ="fa fa-fw fa-home"></i> Əsas səhifə</a>
+                            <a class="nav-link active" href="/"><i class ="fa fa-fw fa-home"></i> Əsas səhifə</a>
                         </li>
                         <li class="nav-item">
                         </li> 
@@ -15,12 +15,15 @@
                             <a class="nav-link active" href="#">Saytda reklam</a>
                         </li>
                     </ul>
+                     <button type="button" class="navbar-toggler">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <ul class="nav navbar-nav ml-auto" id="nav-right">
                         <li>
                             <a class="nav-link fa fa-instagram fa-lg" target="_blank" href="https://www.instagram.com/tap.az/"></a>
                         </li>
                         <li>
-                            <a class="nav-link fa fa-facebook fa-lg" target="_blank"  href="https://www.facebook.com/www.tap.az"></a>
+                            <a class="nav-link fa fa-facebook" target="_blank"  href="https://www.facebook.com/www.tap.az"></a>
                         <li>
                             <a class="nav-link fa fa-apple fa-lg" target="_blank" href="https://itunes.apple.com/us/app/tap.az-pulsuz-elanlar/id1132083305?ls=1&amp;mt=8"></a>
                         </li>
