--- a/app/templates/accounts/login_by_email.html
+++ b/app/templates/accounts/login_by_email.html
@@ -17,7 +17,8 @@
                     </a>
                     <div class="title title--main">Kabinetə giriş</div>
                     
-                    <form action="#">
+                    <form method='POST'>
+                        {% csrf_token %}
                         <div class="input-group">
                                 {{form.email}}
                                 {{form.email.errors}}
@@ -25,8 +26,8 @@
                                 {{form.password}}
                                 {{form.password.errors}}
                         </div>
-                        <button href= "{% url 'users:email-confirmation'%}" type="submit" class="btn btn--default "> 
-                            E-mail kod göndərilsin
+                        <button type="submit" class="btn btn--default "> 
+                            Daxil Ol
                         </button>
                     </form>
                     <div class="confirmation">   
