--- a/app/app/static/css/product_detail.css
+++ b/app/app/static/css/product_detail.css
@@ -1,13 +1,15 @@
-#product_title{
-    font-family:  Helvetica, sans-serif;
-    font-size: 31px;
-    color: #323232;
-    font-weight: bold !important;
-
+#product_title, h3{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 31px;
+  color: #323232;
+  font-weight: bold;
+}
+.h3, h3{
+font-weight: bold !important;
 }
 .price{
-    width:200px;
-    height:80px;
+    width:180px;
+    height:75px;
     border:18px solid #ff6617; 
     background: #ff6617;
     font-weight: bold;
