--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../static/css/navbar.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/base.css'%}">
+    <script src="{% static 'js/dropdown.js' %}"></script>
 
     {% block css %}
     
